// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PictureCard> renders 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {backgroundColor} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        Object {
          "backgroundColor": "#10c0bc",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {caption} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 18,
              },
              false,
              Object {
                "color": "#ffffff",
                "textAlign": "center",
              },
            ]
          }
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {image} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://picsum.photos/320/200/?random",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {portrait} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 220,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 220,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {small} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            Object {
              "height": 100,
            },
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            Object {
              "height": 100,
            },
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {style} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            Object {
              "backgroundColor": "orange",
              "opacity": 0.75,
            },
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            Object {
              "backgroundColor": "orange",
              "opacity": 0.75,
            },
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<PictureCard> when {title} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents={undefined}
  style={undefined}
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#cdd2d4",
        },
        Object {
          "borderRadius": 3,
        },
        Object {
          "width": 168,
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#F5F5F6",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <Image
        onLoad={[Function]}
        resizeMode="center"
        source={
          Object {
            "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "opacity": 0.8,
            },
            Object {
              "width": 168,
            },
            Object {
              "height": 190,
            },
            false,
            undefined,
          ]
        }
      />
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "position": "absolute",
            },
            false,
          ]
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "padding": 10,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 24,
                "fontWeight": "700",
                "letterSpacing": -1,
                "lineHeight": 26,
              },
              false,
              Object {
                "color": "#ffffff",
                "textAlign": "center",
              },
            ]
          }
        >
          Hello world
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "backgroundColor": "#cdd2d4",
          "height": 0,
          "opacity": 0,
          "width": 0,
          "zIndex": 0,
        }
      }
    />
  </View>
</View>
`;
